--- a/package.json
+++ b/package.json
@@ -3,5 +3,6 @@
   "version": "0.1.0",
   "description": "it's a parser library for JS.",
   "author": "TSUYUSATO Kitsune <make.just.on@gmail.com>",
-  "repository": "https://github.com/MakeNowJust/siscom.js"
+  "repository": "https://github.com/MakeNowJust/siscom.js",
+  "license": "MIT"
 }
