--- a/package.json
+++ b/package.json
@@ -4,5 +4,6 @@
   "description": "it's a parser library for JS.",
   "author": "TSUYUSATO Kitsune <make.just.on@gmail.com>",
   "repository": "https://github.com/MakeNowJust/siscom.js",
-  "license": "MIT"
+  "license": "MIT",
+  "main": "siscom.js"
 }
